[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
bh1750 = "0.1.0"
crossbeam-channel = "0.5.14"
eframe = "0.30.0"
egui_extras = "0.30.0"
linux-embedded-hal = "0.4.0"
rppal = "0.22.1"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
